@@ -15,7 +15,7 @@ extern void ost_print_req(void *seq_file, struct ptlrpc_request *req);
  * tunables for per-thread page pool (bug 5137)
  */
 #define OST_THREAD_POOL_SIZE PTLRPC_MAX_BRW_PAGES  /* pool size in pages */
-#define OST_THREAD_POOL_GFP  GFP_HIGHUSER          /* GFP mask for pool pages */
+#define OST_THREAD_POOL_GFP  CFS_ALLOC_HIGHUSER    /* GFP mask for pool pages */
 
 struct page;
 struct niobuf_local;
